[package]
name = "thread-art"
version = "0.1.0"
authors = ["Owen Glofcheski <owen.glofcheski@gmail.com>"]

[profile.release]
debug = true

[dependencies]
clap = "2.33.0"
cgmath = "0.17.0"
csv = "1.1"
gl = "0.11.0"
glutin = "0.9.2"
hex = "0.4.0"
image = "0.21.0"
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
